...
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:paddingStart="12dp"
        android:paddingEnd="8dp">

        <ImageButton
            android:id="@+id/btn_menu"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_menu"
            android:contentDescription="@string/menu_text_desc"
            app:tint="@color/white"/>
...
            android:textSize="17sp"
            android:textAllCaps="false" />
    </LinearLayout>

    <!-- Output Display Area -->
    <LinearLayout
        android:id="@+id/output_display_area"
        android:layout_below="@id/basic_navbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/dark_background"
        android:padding="@dimen/padding"
        android:paddingBottom="32dp">

        <!-- Expression/Input text (1st line) - where user enters digits and functions -->
        <EditText
            android:id="@+id/expression_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="textEnd"
            android:longClickable="true"
            android:textColor="@android:color/white"
            android:textSize="@dimen/solution_text_size"
...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_ac"
                android:layout_width="@dimen/button_size"
                android:layout_height="@dimen/button_size"
                android:layout_margin="@dimen/button_margin"
                app:cornerRadius="55dp"
                android:backgroundTint="@color/button_deep_bg"
                app:icon="@drawable/ic_ac"
...
                android:paddingEnd="0dp"
                app:iconGravity="textStart"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:contentDescription="@string/percent_button_description"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_multiply"
                android:layout_width="@dimen/button_size"
                android:layout_height="@dimen/button_size"
                android:layout_margin="@dimen/button_margin"
                app:cornerRadius="55dp"
                android:backgroundTint="@color/button_function_bg"
                app:icon="@drawable/ic_multiply"
...
                android:layout_margin="@dimen/button_margin"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                app:cornerRadius="55dp"
                android:backgroundTint="@color/button_vlight_bg" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_5"
                android:layout_width="@dimen/button_size"
                android:layout_height="@dimen/button_size"
                android:text="@string/_5"
                android:textColor="@color/subtle_text"
                android:textSize="@dimen/text_size"
                android:layout_margin="@dimen/button_margin"
...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_1"
                android:layout_width="@dimen/button_size"
                android:layout_height="@dimen/button_size"
                android:text="@string/_1"
                android:textColor="@color/subtle_text"
                android:textSize="@dimen/text_size"
                android:layout_margin="@dimen/button_margin"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                app:cornerRadius="55dp"
                android:backgroundTint="@color/button_vlight_bg"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_2"
                android:layout_width="@dimen/button_size"
                android:layout_height="@dimen/button_size"
                android:text="@string/_2"
                android:textColor="@color/subtle_text"
                android:textSize="@dimen/text_size"
                android:layout_margin="@dimen/button_margin"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                app:cornerRadius="55dp"
                android:backgroundTint="@color/button_vlight_bg" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_3"
                android:layout_width="@dimen/button_size"
                android:layout_height="@dimen/button_size"
                android:text="@string/_3"
                android:textColor="@color/subtle_text"
                android:textSize="@dimen/text_size"
                android:layout_margin="@dimen/button_margin"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                app:cornerRadius="55dp"
                android:backgroundTint="@color/button_vlight_bg" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_plus"
                android:layout_width="@dimen/button_size"
                android:layout_height="@dimen/button_size"
                android:layout_margin="@dimen/button_margin"
                app:cornerRadius="55dp"
                android:backgroundTint="@color/button_function_bg"
                app:icon="@drawable/ic_plus"
...
                android:paddingEnd="0dp"
                app:iconGravity="textStart"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:contentDescription="@string/dot_button_description"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_equals"
                android:layout_width="@dimen/button_size"
                android:layout_height="@dimen/button_size"
                android:layout_margin="@dimen/button_margin"
                app:cornerRadius="55dp"
                android:backgroundTint="@color/button_deep_bg"
                app:icon="@drawable/ic_equals"
...
