...
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="20dp">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="BMI Calculator"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/brand_color"
        android:layout_gravity="center_horizontal"/>
    <EditText
        android:layout_width="match_parent"
...
